kubernetes/platform/netbox/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: netbox
  labels:
    aetheriscloud.fr/tier: platform
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/warn: baseline
